# robigus-ui

./: .gitignore  Cargo.toml  README.md
apps/robigus-ui/: Cargo.toml
apps/robigus-ui-web/: Cargo.toml  tailwind.config.js
apps/robigus-ui-web/src/: strings.rs
apps/robigus-ui-web/src/pages/: home.rs  mod.rs  not_found.rs
apps/robigus-ui-web/static/css/: output.css  styles.css
apps/robigus-ui/src/: lib.rs
apps/robigus-ui/src/components/: card.rs
robigus-ui/: Cargo.toml  package.json  pnpm-lock.yaml
robigus-ui-web/: Cargo.toml
robigus-ui-web/src/: main.rs
robigus-ui-web/src/pages/: base.rs  home.rs  index.rs
robigus-ui-web/static/js/: package.json
robigus-ui/src/: lib.rs
