[package]
name = "robigus-ui-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = "4"
maud = { version = "^0", features = ["actix-web"] }
serde = { version = "1", features = ["derive"] }
robigus-ui = { path = "../robigus-ui" }
